<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_Modules" Id="{2eb14c11-3962-48ae-a721-0630be98d468}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	g_emUtilities : EM_Utilities;
	g_emPalletConveyor : EM_PalletConveyor;
	g_emDockingInterface : EM_DockingInterface;
	g_emLiftingTransport : EM_LiftingTransport;
//##_DOORS_DISABLED_##	g_emDoors : EM_Doors;
//##_DOCKING_CABIN_DISABLED_##	g_emDockingCabin : EM_DockingCabin;
	g_emAirTreatment : EM_AirTreatment;
	g_objCarrier : OBJ_Carrier;
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>