<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MsgBox" Id="{cbeb196d-d592-47b5-b1ed-1e5e17cc6f3f}">
    <Declaration><![CDATA[TYPE ST_MsgBox :
STRUCT
	bShow : BOOL := FALSE;
	bBtnPressed : BOOL := FALSE;
	sMessageText : STRING(64) := '_just_a_message_';
	sResponse : STRING(32) := '_just_an_response_';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>